# csc10003-svg-reader

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  Doxyfile  README.md  hpp2plantuml
diagrams/: All.puml  ColorShape.puml  Gradient.puml  Group.puml  Parser.puml  Renderer.puml  Shape.puml  ViewBox.puml  Viewer.puml
docs/: CNAME  Circle_8cpp_source.html  Circle_8hpp_source.html  ColorShape_8cpp_source.html  ColorShape_8hpp_source.html  Color_8cpp_source.html  Color_8hpp_source.html  Ellipse_8cpp_source.html  Ellipse_8hpp_source.html  Gradient_8cpp_source.html  Gradient_8hpp_source.html  Graphics_8hpp_source.html  Group_8cpp_source.html  Group_8hpp_source.html  Line_8cpp_source.html  Line_8hpp_source.html  LinearGradient_8cpp_source.html  LinearGradient_8hpp_source.html  Parser_8cpp_source.html  Parser_8hpp_source.html  Path_8cpp_source.html  Path_8hpp_source.html  PolyShape_8cpp_source.html  PolyShape_8hpp_source.html  Polygon_8cpp_source.html  Polygon_8hpp_source.html  Polyline_8cpp_source.html  Polyline_8hpp_source.html  RadialGradient_8cpp_source.html  Rect_8cpp_source.html  Rect_8hpp_source.html  Renderer_8cpp_source.html  Renderer_8hpp_source.html  SVGElement_8cpp_source.html  SVGElement_8hpp_source.html  Shape_8hpp_source.html  Stop_8cpp_source.html  Stop_8hpp_source.html  Text_8cpp_source.html  Text_8hpp_source.html  (+177 more)
graphics/: Shape.hpp
html/: Circle_8cpp_source.html  Ellipse_8cpp_source.html  Group_8hpp_source.html  Parser_8cpp_source.html  Path_8cpp_source.html  RadialGradient_8hpp_source.html  Text_8hpp_source.html  classEll__coll__graph.md5  classEll__inherit__graph.md5  classGroup-members.html  classGroup.js  classGroup__coll__graph.map  classLine-members.html  classLinearGradient__inherit__graph.map  classPlygon__inherit__graph.map  classPlyline-members.html  classPlyline__coll__graph.map  classPlyline__inherit__graph.md5  classPolyline-members.html  classPolyline.html  classPolyline.js  classRect__inherit__graph.map  classSVGElement__coll__graph.md5  classShape__inherit__graph.map  classText-members.html  classText__inherit__graph.map  classViewer.html  classViewer__coll__graph.map  classViewer__coll__graph.md5  functions.html  functions_d.html  functions_f.html  functions_g.html  functions_i.html  functions_n.html  functions_vars.html  functions_z.html  hierarchy.html  inherit_graph_0.map  inherit_graph_6.map  (+4 more)
latex/: annotated.tex  classCircle.tex  classEll.tex  (+58 more)
(+446 files in other folders)
